# spacerobo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  export_presets.cfg  flake.nix  icon.svg.import  project.godot  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: cachix-push.yml  cron-flake-update.yml  nix-checker.yml  pr-conventional-commits-validation.yml  rust-ci.yml  (+1 more)
assets/: THIRDPARTY_LICENSE.md
crates/bot/: Cargo.toml
crates/client/: Cargo.toml
crates/client/assets/: THIRDPARTY_LICENSE.md
crates/client/crates/shooting_range_plugin/: Cargo.toml
crates/client/crates/shooting_range_plugin/src/: lib.rs
crates/client/crates/title_plugin/src/: lib.rs
crates/client/crates/versus_guest_plugin/src/: client.rs
crates/client/crates/versus_guest_plugin/src/entities/opponent/: bullet.rs
crates/client/crates/versus_master_plugin/src/: lib.rs  server.rs
crates/client/crates/versus_master_plugin/src/entity/: player.rs
crates/client/crates/versus_master_plugin/src/entity/player/: ui.rs
crates/client/src/: lib.rs  main.rs  plugins.rs  webtransport.rs
crates/client/src/plugins/: commons.rs  mod.rs  shooting_range_plugin.rs  title_plugin.rs  versus_guest_plugin.rs  versus_master_plugin.rs  versus_plugin.rs
crates/client/src/plugins/commons/: configs.rs
crates/client/src/plugins/shooting_range_plugin/: mod.rs
crates/client/src/plugins/shooting_range_plugin/entities/: bot.rs  player.rs  target.rs
crates/client/src/plugins/shooting_range_plugin/entities/bot/: health.rs
crates/client/src/plugins/shooting_range_plugin/entities/bot/gun/: select_fire.rs
crates/client/src/plugins/shooting_range_plugin/entities/bot/gun/bullet/: health.rs
crates/client/src/plugins/shooting_range_plugin/entities/player/: ui.rs
crates/client/src/plugins/shooting_range_plugin/entities/player/gun/: select_fire.rs
crates/client/src/plugins/shooting_range_plugin/entities/player/movement/: keyboard.rs
crates/client/src/plugins/versus_guest_plugin/: client.rs  health.rs  mod.rs
crates/client/src/plugins/versus_guest_plugin/entities/: opponent.rs  player.rs
crates/client/src/plugins/versus_guest_plugin/entities/opponent/: bullet.rs  health.rs
crates/client/src/plugins/versus_guest_plugin/entities/player/: ui.rs
crates/client/src/plugins/versus_guest_plugin/entities/player/gun/: select_fire.rs
crates/client/src/plugins/versus_guest_plugin/entities/player/gun/bullet/: health.rs
crates/client/src/plugins/versus_guest_plugin/entities/player/movement/: mouse.rs
crates/client/src/plugins/versus_master_plugin/: health.rs  mod.rs  server.rs
crates/client/src/plugins/versus_master_plugin/entities/: opponent.rs  player.rs
crates/client/src/plugins/versus_master_plugin/entities/opponent/: bullet.rs  health.rs
crates/client/src/plugins/versus_master_plugin/entities/player/: health.rs  ui.rs
crates/client/src/plugins/versus_master_plugin/entities/player/gun/: select_fire.rs
crates/client/src/plugins/versus_master_plugin/entities/player/movement/: mouse.rs
crates/client/src/plugins/versus_plugin/entities/: opponent.rs  player.rs
crates/client/src/plugins/versus_plugin/entities/opponent/: bullet.rs
crates/client/src/plugins/versus_plugin/entities/player/: ui.rs
crates/client/src/webtransport/: client.rs
crates/commons/: Cargo.toml
crates/commons/src/: configs.rs  controllable.rs  lib.rs  playable.rs
crates/commons/src/configs/: network.rs  player.rs
crates/commons/src/controllable/: keyboard.rs  mouse.rs
crates/commons/src/entities/: bot.rs  player.rs  target.rs
crates/commons/src/entities/bot/: health.rs
crates/commons/src/entities/bot/gun/: select_fire.rs
crates/commons/src/entities/bot/gun/bullet/: health.rs
crates/commons/src/entities/player/: health.rs  ui.rs
crates/commons/src/entities/player/gun/: select_fire.rs
crates/commons/src/entities/player/movement/: keyboard.rs  mouse.rs
crates/commons/src/entity/: bot.rs  player.rs  target.rs
crates/commons/src/entity/bot/gun/: select_fire.rs
crates/commons/src/entity/player/: health.rs  ui.rs
crates/commons/src/entity/player/gun/bullet/: health.rs
crates/commons/src/entity/player/movement/: keyboard.rs  mouse.rs
crates/entity/: Cargo.toml
crates/entity/src/: entity.rs
crates/entity/src/entity/: bot.rs  player.rs  target.rs
crates/entity/src/entity/bot/: health.rs
crates/entity/src/entity/player/: health.rs  ui.rs
crates/entity/src/entity/player/gun/: select_fire.rs
crates/entity/src/entity/player/gun/bullet/: health.rs
crates/entity/src/entity/player/movement/: mouse.rs
crates/player/: Cargo.toml
crates/player/gun/: Cargo.toml
crates/player/gun/src/: gun.rs  lib.rs  select_fire.rs
crates/player/gun/src/gun/: select_fire.rs
crates/player/src/: controllable.rs  health.rs  lib.rs  movement.rs  ui.rs
crates/player/src/controllable/: keyboard.rs  mouse.rs
crates/player/src/movement/: keyboard.rs  mouse.rs
crates/plugins/shooting_range_plugin/: Cargo.toml
crates/plugins/shooting_range_plugin/src/: lib.rs
crates/plugins/shooting_range_plugin/src/entities/bot/: gun.rs  health.rs
crates/plugins/versus_master_plugin/: Cargo.toml
crates/plugins/versus_master_plugin/src/entities/opponent/: health.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  webtransport.rs
crates/server/src/webtransport/: server.rs
crates/versus_guest_plugin/: Cargo.toml
crates/versus_guest_plugin/src/: client.rs  health.rs
crates/versus_guest_plugin/src/entities/: player.rs
crates/versus_guest_plugin/src/entities/opponent/: health.rs
crates/versus_guest_plugin/src/entities/player/: health.rs  ui.rs
crates/versus_guest_plugin/src/entities/player/gun/: select_fire.rs
crates/versus_guest_plugin/src/entities/player/movement/: keyboard.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: builder.rs  cli.rs  lib.rs  main.rs
docs/: .gitignore  README.md  build.el  justfile
scripts/: push-artifacts-to-cachix.nu
src/: cli.rs  configs.rs  entities.rs  lib.rs  main.rs  player.rs  scenes.rs  system.rs  systems.rs  target.rs  title.rs
(+111 files in other folders)
