# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = [
  "crates/client",
  "crates/client/crates/shooting_range_plugin",
  "crates/client/crates/title_plugin",

  "crates/commons",
  "crates/entity",
]

[workspace.package]
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
description = "A game to simulate a robo's moving in space"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/haruki7049/spacerobo"
publish = false

[workspace.metadata.crane]
name = "spacerobo"

[workspace.dependencies]
spacerobo_commons = { path = "crates/commons" }
spacerobo_entity = { path = "crates/entity" }
spacerobo_title_plugin = { path = "crates/client/crates/title_plugin" }
spacerobo_shooting_range_plugin = { path = "crates/client/crates/shooting_range_plugin" }
spacerobo_versus_master_plugin = { path = "crates/client/crates/versus_master_plugin" }
spacerobo_versus_guest_plugin = { path = "crates/client/crates/versus_guest_plugin" }
bevy = { version = "0.16.1", features = ["serialize", "wayland"] }
avian3d = { version = "0.3.1", features = ["serialize"] }
aeronet = "0.16.1"
aeronet_webtransport = { version = "0.16.1", features = ["client", "server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
url = { version = "2.5.7", features = ["serde"] }
wtransport = "0.6.1"
clap = { version = "4.5.40", features = ["derive", "string"] }
confy = "1.0.0"
directories = "6.0.0"
