# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = [
  # Application crates
  "crates/client",

  # Plugins
  "crates/plugins/shooting_range_plugin",
  "crates/plugins/title_plugin",

  # Library crates
  "crates/commons",
  "crates/player",
  "crates/player/gun",
  "crates/target",
  "crates/bot",
  "crates/bot/gun",
]

[workspace.package]
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
description = "A game to simulate a robo's moving in space"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/haruki7049/spacerobo"
publish = false

[workspace.metadata.crane]
name = "spacerobo"

[workspace.dependencies]
spacerobo_commons = { path = "crates/commons" }
spacerobo_player.path = "crates/player"
spacerobo_player_gun.path = "crates/player/gun"
spacerobo_target.path = "crates/target"
spacerobo_bot.path = "crates/bot"
spacerobo_bot_gun.path = "crates/bot/gun"
spacerobo_title_plugin = { path = "crates/plugins/title_plugin" }
spacerobo_shooting_range_plugin = { path = "crates/plugins/shooting_range_plugin" }
bevy = { version = "0.16.1", features = [
  "serialize",
  "wayland",
  "track_location",
] }
avian3d = { version = "0.3.1", features = ["serialize"] }
aeronet = "0.16.1"
aeronet_webtransport = { version = "0.16.1", features = ["client", "server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
url = { version = "2.5.7", features = ["serde"] }
wtransport = "0.6.1"
clap = { version = "4.5.40", features = ["derive", "string"] }
confy = "1.0.0"
directories = "6.0.0"
