# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[workspace]
resolver = "3"
default-members = ["crates/client"]
members = [
  # Application crates
  "crates/client",

  # Plugins
  "crates/plugins/shooting_range_plugin",
  "crates/plugins/title_plugin",

  # Library crates
  "crates/commons",
  "crates/player",
  "crates/player/gun",
  "crates/target",

  # cargo-xtask
  "crates/xtask",
]

[workspace.package]
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
description = "A game to simulate a robo's moving in space"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/haruki7049/spacerobo"
publish = false

[workspace.metadata.crane]
name = "spacerobo"

[workspace.dependencies]
spacerobo_commons = { path = "crates/commons" }
spacerobo_player.path = "crates/player"
spacerobo_player_gun.path = "crates/player/gun"
spacerobo_target.path = "crates/target"
spacerobo_title_plugin = { path = "crates/plugins/title_plugin" }
spacerobo_shooting_range_plugin = { path = "crates/plugins/shooting_range_plugin" }
bevy = { version = "0.18.1", features = [
  "serialize",
  "wayland",
  "track_location",
] }
avian3d = { version = "0.6.1", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive", "string"] }
confy = "1.0.0"
directories = "6.0.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow = "1.0.102"
