[package]
name = "spacerobo_client"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
spacerobo_commons.workspace = true
spacerobo_title_plugin.workspace = true
spacerobo_shooting_range_plugin.workspace = true
spacerobo_versus_master_plugin.workspace = true
spacerobo_versus_guest_plugin.workspace = true
bevy.workspace = true
avian3d.workspace = true
aeronet_webtransport.workspace = true
clap.workspace = true
directories.workspace = true
confy.workspace = true
