[package]
name = "spacerobo_client"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bevy.workspace = true
avian3d.workspace = true
aeronet.workspace = true
aeronet_webtransport.workspace = true
clap.workspace = true
directories.workspace = true
confy.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
wtransport.workspace = true
