[package]
name = "spacerobo_commons"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bevy.workspace = true
avian3d.workspace = true
chrono.workspace = true
serde.workspace = true
url.workspace = true
