[package]
name = "spacerobo_entity"
authors.workspace = true
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
spacerobo_commons.workspace = true
spacerobo_player.workspace = true
spacerobo_target.workspace = true
bevy.workspace = true
avian3d.workspace = true
