[package]
name = "spacerobo_player"
authors.workspace = true
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bevy.workspace = true
avian3d.workspace = true
spacerobo_commons.workspace = true
spacerobo_gun.workspace = true