[package]
name = "spacerobo_server"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bevy.workspace = true
avian3d.workspace = true
aeronet.workspace = true
aeronet_webtransport.workspace = true
spacerobo_commons.workspace = true
serde_json.workspace = true
chrono.workspace = true
wtransport.workspace = true
