[package]
name = "spacerobo_versus_guest_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
spacerobo_commons = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
aeronet = { workspace = true }
aeronet_webtransport = { workspace = true }
chrono = { workspace = true }
