[package]
name = "spacerobo_shooting_range_plugin"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
spacerobo_commons.workspace = true
avian3d.workspace = true
bevy.workspace = true
