[package]
name = "spacerobo_shooting_range_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
spacerobo_commons.workspace = true
spacerobo_target.workspace = true
spacerobo_bot.workspace = true
spacerobo_player.workspace = true
spacerobo_bot_gun.workspace = true
avian3d.workspace = true
bevy.workspace = true
