[package]
name = "spacerobo_versus_master_plugin"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bevy.workspace = true
avian3d.workspace = true
spacerobo_commons.workspace = true
serde_json.workspace = true
wtransport.workspace = true
aeronet.workspace = true
aeronet_webtransport.workspace = true
chrono.workspace = true
